List analysis + filters
